# ai-image-gen-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_FINAL.md  SETUP_GUIDE.md  claude_desktop_config.json  pyproject.toml  test_dalle.py  test_debug.py  test_image_generation.py  test_openai_api.py  test_openai_api2.py  test_server_startup.py  test_simple_image.py
.github/workflows/: ci.yml
docs/: OPENAI_IMAGE_GENERATION.md  PRD.md  PRD_CLARIFICATIONS.md  REPOSITORY_STRUCTURE.md
examples/: README.md  basic_usage.py  claude_desktop_config.example.json  multiple_models.py
examples/html/: index.html  script.js  style.css
scripts/: .mcp.json  install_to_project.sh  run_server.py  setup_claude_code.sh  start_dev_server.sh  test_claude_code_integration.sh
src/ai_image_gen_mcp/: __init__.py  __main__.py  config.py  server.py  types.py
src/ai_image_gen_mcp/models/: __init__.py  base.py  dalle.py  gpt_image.py  router.py
src/ai_image_gen_mcp/storage/: __init__.py  base.py  local.py
tests/: __init__.py  test_models.py  test_server.py  test_storage.py
